[package]
name = "bpsr-logs"
version = "0.1.0"
description = "A Tauri App"
authors = ["winj"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bpsr-protobuf = { git = "https://github.com/winjwinj/bpsr-protobuf" }
tauri-plugin-single-instance = "2.3.4"
anyhow = "1.0.99"
log = "0.4.28"
byteorder = "1.5.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"
etherparse = "0.19.0"
windivert = { version = "0.6.0", features = ["vendored"] }
windivert-sys = "0.10.0"
zstd = "0.13.3"
tauri-plugin-log = { version = "2.7.0", features = ["colored"] }
bytes = "1.10.1"
prost = "0.14.1"
chrono = "0.4.41"
